--- a/biblography.bib
+++ b/biblography.bib
@@ -465,4 +465,85 @@
   publisher     = {JSTOR},
 }
 
+@Article{JunStein2007,
+  author    = {Jun, Mikyoung and Stein, Michael L},
+  title     = {An Approach to Producing Space: Time Covariance Functions on Spheres},
+  journal   = {Technometrics},
+  year      = {2007},
+  volume    = {49},
+  number    = {4},
+  pages     = {468-479},
+  abstract  = {For space-time processes on global or large scales, it is critical to use models that respect the Earth's spherical shape. The covariance functions of such processes should be not only positive definite on sphere × time, but also capable of capturing the dynamics of the processes well. We develop space-time covariance functions on sphere × time that are flexible in producing space-time interactions, especially space-time asymmetries. Our idea is to consider a sum of independent processes in which each process is obtained by applying a first-order differential operator to a fully symmetric process on sphere × time. The resulting covariance functions can produce various types of space-time interactions and give different covariance structures along different latitudes. Our approach yields explicit expressions for the covariance functions, which has great advantages in computation. Moreover, it applies equally well to generating asymmetric space-time covariance functions on flat or other spatial domains. We study various characteristics of our new covariance functions, focusing on their space-time interactions. We apply our model to a dataset of total column ozone levels in the Northern hemisphere.},
+  issn      = {00401706},
+  publisher = {[Taylor \& Francis, Ltd., American Statistical Association, American Society for Quality]},
+  url       = {http://www.jstor.org/stable/25471392},
+}
+
+@Article{Vescovo1997,
+  author  = {{Vescovo}, R.},
+  title   = {{Inversion of block-circulant matrices and circular array approach}},
+  journal = {IEEE Transactions on Antennas and Propagation},
+  year    = {1997},
+  volume  = {45},
+  pages   = {1565-1567},
+  month   = oct,
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+  adsurl  = {http://adsabs.harvard.edu/abs/1997ITAP...45.1565V},
+  doi     = {10.1109/8.633869},
+}
+
+@Article{Cressie1980,
+  author   = {Cressie, Noel and Hawkins, Douglas M.},
+  title    = {Robust estimation of the variogram: I},
+  journal  = {Journal of the International Association for Mathematical Geology},
+  year     = {1980},
+  volume   = {12},
+  number   = {2},
+  pages    = {115--125},
+  abstract = {It is a matter of common experience that ore values often do not follow the normal (or lognormal) distributions assumed for them, but, instead, follow some other heavier-tailed distribution. In this paper we discuss the robust estimation of the variogram when the distribution is normal-like in the central region but heavier than normal in the tails. It is shown that the use of a fourth-root transformation with or without the use of M-estimation yields stable robust estimates of the variogram.},
+  doi      = {10.1007/BF01035243},
+  issn     = {1573-8868},
+  url      = {http://dx.doi.org/10.1007/BF01035243},
+}
+
+@Article{cressie1985fitting,
+  author    = {Cressie, Noel},
+  title     = {Fitting variogram models by weighted least squares},
+  journal   = {Journal of the International Association for Mathematical Geology},
+  year      = {1985},
+  volume    = {17},
+  number    = {5},
+  pages     = {563--586},
+  publisher = {Springer},
+}
+
+@Book{fuller2009introduction,
+  title     = {Introduction to statistical time series},
+  publisher = {John Wiley \& Sons},
+  year      = {2009},
+  author    = {Fuller, Wayne A},
+  volume    = {428},
+}
+
+@Article{Zhang:2004:IEA,
+  author          = {Hao Zhang},
+  title           = {Inconsistent Estimation and Asymptotically Equal Interpolations in Model-Based Geostatistics},
+  journal         = j-J-AM-STAT-ASSOC,
+  year            = {2004},
+  volume          = {99},
+  number          = {465},
+  pages           = {250--261},
+  month           = mar,
+  acknowledgement = {#ack-nhfb#},
+  bibdate         = {Wed Jan 25 08:06:28 MST 2012},
+  bibsource       = {http://www.amstat.org/publications/jasa/; http://www.jstor.org/journals/01621459.html; http://www.jstor.org/stable/i27590345; http://www.math.utah.edu/pub/tex/bib/jamstatassoc2000.bib},
+  coden           = {JSTNAL},
+  fjournal        = {Journal of the American Statistical Association},
+  issn            = {0162-1459 (print), 1537-274X (electronic)},
+  issn-l          = {0162-1459},
+  journal-url     = {http://www.tandfonline.com/loi/uasa20},
+  url             = {http://miranda.asa.catchword.org/vl=1515603/cl=66/nw=1/rpsv/cw/asa/01621459/v99n465/s24/p250;
+                 http://www.jstor.org/stable/27590370},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
