--- a/P1_results.tex
+++ b/P1_results.tex
@@ -119,14 +119,14 @@ When the random process on a sphere is non zero mean, the cross covariance estim
 		\centering
 		\includegraphics[keepaspectratio, scale=0.8]{graphs/Model2}
 		\caption{Model 2 \eqref{model2}}
-		\label{fig:sfig1}
+		\label{fig:cov2}
 	\end{subfigure}
 	\begin{subfigure}{1\textwidth}
 		\centering
 		\includegraphics[keepaspectratio, scale=0.8]{graphs/Model3}
 		% \includegraphics[width=1\linewidth]{graphs/Model3}
 		\caption{Model 3 \eqref{model3}}
-		\label{fig:sfig2}
+		\label{fig:cov3}
 	\end{subfigure}
 \caption{Cross covariance comparison of model 2 and model 3}
 \end{figure}
