--- a/Dissertation.tex
+++ b/Dissertation.tex
@@ -16,6 +16,8 @@
 \usepackage{framed}
 \usepackage{subcaption}
 \usepackage{multirow}
+\usepackage{setspace}
+\usepackage[font=doublespacing]{caption}
 
 
 
@@ -177,7 +179,7 @@ In memory of my fater, Donald Anthony Vanlangenberg
 
 %%------------------------------------------------------------------%%
 \chapter{Introduction}
-\input{chapters/Introduction_2.tex}
+\input{chapters/Introduction_3.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Literature Review}
@@ -194,7 +196,7 @@ In memory of my fater, Donald Anthony Vanlangenberg
 
 %%------------------------------------------------------------------%%
 \chapter{Global Data Generation and Estimation on the Sphere}
-\input{chapters/datageneration_2.tex}
+\input{chapters/datageneration_3.tex}
 
 %%------------------------------------------------------------------%%
 \chapter{Future Research}
