--- a/biblography.bib
+++ b/biblography.bib
@@ -546,4 +546,18 @@
                  http://www.jstor.org/stable/27590370},
 }
 
+@Article{Matheron1973,
+  author    = {G. Matheron},
+  title     = {The Intrinsic Random Functions and Their Applications},
+  journal   = {Advances in Applied Probability},
+  year      = {1973},
+  volume    = {5},
+  number    = {3},
+  pages     = {439-468},
+  abstract  = {The intrinsic random functions (IRF) are a particular case of the Guelfand generalized processes with stationary increments. They constitute a much wider class than the stationary RF, and are used in practical applications for representing non-stationary phenomena. The most important topics are: existence of a generalized covariance (GC) for which statistical inference is possible from a unique realization; theory of the best linear intrinsic estimator (BLIE) used for contouring and estimating problems; the turning bands method for simulating IRF; and the models with polynomial GC, for which statistical inference may be performed by automatic procedures.},
+  issn      = {00018678},
+  publisher = {Applied Probability Trust},
+  url       = {http://www.jstor.org/stable/1425829},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
